--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
         <h1>Beginner’s Guide to Healthy Eating</h1>
         <nav>
             <ul>
-                <li><a href="<#">Home</a></li>
-                <li><a href="#">Essential Nutrients</a></li>
-                <li><a href="#">Portion Sizes</a></li>
-                <li><a href="#">Meal Ideas</a></li>
-                <li><a href="#">Grocery Shopping</a></li>
-                <li><a href="#">Nutrition Myths</a></li>
-                <li><a href="#">Lifestyle Tips</a></li>
-                <li><a href="#">Resources</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="introduction-to-healthy-eating.html">Essential Nutrients</a></li>
+                <li><a href="understanding-portion-sizes.html">Portion Sizes</a></li>
+                <li><a href="simple-affordable-meal-ideas.html">Meal Ideas</a></li>
+                <li><a href="grocery-shopping-tips.html">Grocery Shopping</a></li>
+                <li><a href="nutrition-myths.html">Nutrition Myths</a></li>
+                <li><a href="healthy-lifestyle-tips.html">Lifestyle Tips</a></li>
+                <li><a href="resources.html">Resources</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -27,7 +27,7 @@
     <section class="hero">
         <h2>Welcome to Your Guide for Healthier Eating</h2>
         <p>Learn the basics of nutrition, how to plan meals, and make healthier food choices with confidence.</p>
-        <a href="#" class="btn">Get Started</a>
+        <a href="#" class="btn">Get Started Now!</a>
     </section>
 
     <footer>
