--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="introduction-to-healthy-eating.html">Essential Nutrients</a></li>
+                <li><a href="introduction-to-healthy-eating.html">Healthy Eating</a></li>
                 <li><a href="understanding-portion-sizes.html">Portion Sizes</a></li>
                 <li><a href="simple-affordable-meal-ideas.html">Meal Ideas</a></li>
                 <li><a href="grocery-shopping-tips.html">Grocery Shopping</a></li>
