--- a/resources.html
+++ b/resources.html
@@ -12,12 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="portion-sizes.html">Portion Sizes</a></li>
-                <li><a href="meal-ideas.html">Meal Ideas</a></li>
-                <li><a href="grocery-tips.html">Grocery Tips</a></li>
-                <li><a href="nutrition-myths.html">Nutrition Myths</a></li>
-                <li><a href="lifestyle-tips.html">Lifestyle Tips</a></li>
-                <li><a href="contact.html">Contact</a></li>
+              
             </ul>
         </nav>
     </header>
@@ -37,4 +32,9 @@
         <ul>
             <li><a href="https://www.choosemyplate.gov/" target="_blank">Choose MyPlate</a> – USDA’s guide to balanced meals.</li>
             <li><a href="https://www.budgetbytes.com/" target="_blank">Budget Bytes_
-''
+                </a>
+            </li>
+        </ul>
+    </section>
+    </body>
+</html>
